--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,6 +21,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'The Mentor: Two Early German Painters, Vol. 1, Num. 48, Serial No. 48
 
   Dürer and Holbein'
